@@ -66,13 +66,13 @@ import static java.awt.Color.lightGray;
  */
 public class MatchingGameCanvas extends AbstractFractionsCanvas {
 
-    public MatchingGameCanvas( final boolean dev, final MatchingGameModel model, final boolean standaloneSim ) {
+    public MatchingGameCanvas( final boolean dev, final MatchingGameModel model, final boolean standaloneSim, String title ) {
 
         //Bar graph node that shows now bars, shown when the user has put something on both scales but hasn't checked the answer
         final PNode emptyBarGraphNode = new EmptyBarGraphNode();
 
         //Show the start screen when the user is choosing a level.
-        addStartScreen( model, standaloneSim );
+        addStartScreen( model, standaloneSim, title );
 
         //Show the reward node behind the main node so it won't interfere with the results the user collected.
         addChild( new RewardNode( model ) );
@@ -260,7 +260,7 @@ public class MatchingGameCanvas extends AbstractFractionsCanvas {
     }
 
     //Add all the parts of the start screen, including title, level selection buttons, audio+timer buttons
-    private void addStartScreen( final MatchingGameModel model, final boolean standaloneSim ) {//Game settings
+    private void addStartScreen( final MatchingGameModel model, final boolean standaloneSim, final String title ) {//Game settings
         final GameSettings gameSettings = new GameSettings( new IntegerRange( 1, 8, 1 ), false, false );
 
         //Function invoked when the user pushes a level button to start the game.
@@ -288,7 +288,7 @@ public class MatchingGameCanvas extends AbstractFractionsCanvas {
 
         //Title text, only shown when the user is choosing a level
         final PNode titleText = new PNode() {{
-            addChild( new PhetPText( Strings.FRACTION_MATCHER, new PhetFont( 38, true ) ) );
+            addChild( new PhetPText( title, new PhetFont( 38, true ) ) );
             model.choosingSettings.addObserver( setNodeVisible( this ) );
 
             setOffset( STAGE_SIZE.getWidth() / 2 - getFullBounds().getWidth() / 2, levelSelectionDialog.getFullBounds().getMinY() / 3 - getFullBounds().getHeight() / 2 );
